force-app/main/default/objects/TNCar__c/TNCar__c.object-meta.xml
<CustomObject>
    <label>TN Car</label>
    <nameField>
        <displayFormat>TNC-{0000}</displayFormat>
        <label>TN Car</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TN Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>