force-app/main/default/objects/TNCar__c/fields/TNCarCountry__c.field-meta.xml
<CustomField>
    <fullName>TNCarCountry__c</fullName>
    <label>TN Car Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>