force-app/main/default/objects/TNCar__c/fields/TNCarLicence__c.field-meta.xml
<CustomField>
    <fullName>TNCarLicence__c</fullName>
    <externalId>true</externalId>
    <label>TN Car Licence</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>