force-app/main/default/objects/TNCar__c/fields/TNCarType__c.field-meta.xml
<CustomField>
    <fullName>TNCarType__c</fullName>
    <label>TN Car Type</label>
    <referenceTo>TNCarType__c</referenceTo>
    <relationshipLabel>TN Cars</relationshipLabel>
    <relationshipName>TN_Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>